# solitude

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ProjectSettings.cmake  solitudeConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: CMakeLists.txt  benchmark.h  playground.cpp  puzzle_gen.cpp
examples/visualizer/: CMakeLists.txt  main.cpp  window.cpp  window.h
examples/visualizer/elements/: board.cpp  board.h  constants.cpp  constants.h  sizes.cpp  sizes.h  style.cpp  style.h
examples/visualizer/gui/: canvas_view.cpp  canvas_view.h  color_literals.h  window.cpp  window.h
lib/: CMakeLists.txt
lib/include/solitude/: bitset.h  board.h  export.h  generator.h  step.h  strategies.h  utils.h
lib/include/solitude/strategies/: als.h  chains.h  coloring.h  fish.h  intersection.h  subsets.h  sue_de_coq.h  wings.h
lib/src/: board.cpp  generator.cpp  utils.cpp
lib/src/strategies/: als.cpp  chains.cpp  coloring.cpp  common.cpp  common.h  fish.cpp  intersection.cpp  subsets.cpp  sue_de_coq.cpp  uniqueness.cpp  wings.cpp
